--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "main.js",
   "scripts": {
-    "start": "nodemon main.js",
+    "dev": "nodemon main.js",
+    "start" : "node main.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "KitDoMMO-kitdostudio@gmail.com",
