--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parse": "^0.1.0",
+    "dateformat": "^4.5.1",
     "express": "^4.17.1",
     "JSON": "^1.0.0",
     "jsonwebtoken": "^8.5.1",
