--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.17.1",
     "JSON": "^1.0.0",
     "jsonwebtoken": "^8.5.1",
+    "moment-timezone": "^0.5.33",
     "random": "^3.0.6"
   }
 }
